# PaperMemory

./: .gitignore  pyproject.toml
ai/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
ai/abstract_scraper/: abstract_scraper.py  categories_to_scrape.py
ai/notebooks/: get_proper_model_an_threshold.ipynb
ai/run/: app.py  predict.py  validate.py
ai/scripts/: read_labeled_dataset.py
ai/src/predict/: predict.py
ai/src/preprocessing/: cleaner.py
ai/src/validate/: validate.py
ai/tasks/: api.sh  clean-abstracts.sh  predict.sh  prepare-devset.sh  validate.sh
src/popup/: popup.html
src/popup/js/: popup.js  templates.js
src/popup/min/: popup.min.html  popup.min.js
src/shared/js/utils/: config.js  functions.js
src/shared/min/: utils.min.js
