[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "arxiv>=1.4.2",
    "pandas>=1.4.4",
    "tqdm>=4.64.1",
    "keybert>=0.6.0",
    "keyphrase-vectorizers>=0.0.10",
    "pip>=22.2.2",
    "flask>=2.2.2",
]
requires-python = ">=3.8.10, <3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "ipykernel>=6.15.3",
    "matplotlib>=3.6.0",
]
